added algorand methods
