# docs/swagger.json
@@ -21,6 +21,26 @@
     "host": "localhost:9093",
     "basePath": "/",
     "paths": {
+        "/createalgoaccount": {
+            "get": {
+                "description": "get the status of server.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Create a new algo account.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/pagoentities": {
             "get": {
                 "description": "get the status of server.",
